--- a/report/FinalReport/Introduction.tex
+++ b/report/FinalReport/Introduction.tex
@@ -12,5 +12,5 @@ Where $d(\sigma, \sigma')$ is the hamming distance between those two partitions.
 
 A really naive algorithm called FLIP solves this problem. It finds a vertex which if flipped leads to an amelioration of the total weight cut, flips it and repeat until no such vertex exists. Some instances of graphs have been found to have an exponential number of steps before terminating. However, for most of the graphs, FLIP terminates in a reasonable time. Moreover, when adding a small amount of noise to the graphs for which the number of step is exponential, FLIP's running time seem to behave as polynomail. This lead to the study of the smoothed complexity of FLIP, in which noise is added to the edge weights. From now on, complexity will stand for smoothed complexity in this paper. \\
 
-Etscheid and Röglin (2014) \cite{Roglin2014} proved that the complexity was at most quasi-polynomial in n for arbitrary graphs, with the insight that it may be polynomial. Angel et al. (2016) \cite{angel2016local} proved that the complexity was polynomial for complete graphs. \\
+Etscheid and Röglin \cite{etscheid2017smoothed} proved that the complexity was at most quasi-polynomial in n for arbitrary graphs, with the insight that it may be polynomial. Angel et al. (2016) \cite{angel2016local} proved that the complexity was polynomial for complete graphs. \\
 We study here other special classes of graphs, for which the complexity is polynomial.
