--- a/report/FinalReport/Generalisation.tex
+++ b/report/FinalReport/Generalisation.tex
@@ -20,14 +20,17 @@ P(A) \leq P(A_1) + P(A_2) + P(A_3)
 Assume $A_1$, then there exists some vertex $v$ in the sequence that has logarithmic degree. We saw that with high probability there exists no such $v$ that leads to an improvement of less than $\epsilon$ for $\epsilon = n^{-2-\eta}\phi^{-1}$, with $\eta > 0$.\\
 
 We saw that the $CSub$ in $A_2$ has rank at least $1.25s(CSub)$. We can also use the lemma \ref{lem::partition} with $E_2(v_t)$ being the edges going from $v_t$ to another clique. Since there are at most $log(n)$ such edges, the improvement made by the rest of the edges must lie in the union of at most $2^{log(n)}$ intervals of measure $\epsilon$, we can also say that the improvement made by the other edges must lie in an interval of measure at most $n\epsilon$.\\
-Using lemma \ref{boundN} along with an union-bound on possible $CSub$ we get the following bound :
+Using lemma \ref{cor::boundN} along with an union-bound on possible $CSub$ we get the following bound :
  \begin{equation*}
- P(A_2) \leq \sum_{s<n}(64\phi^{5/4}n^2n^{1/4}\epsilon^{1/4})^s
+ \begin{split}
+ P(A_2) \leq &\sum_{s<n}n^{2s}(2n/n\epsilon)^s (16(n + 1)^{5/4}\phi^{5/4}\epsilon^{5/4})^s \\
+ \leq & \sum_{s<n} C(n^{13/4}\phi{5/4}\epsilon^{1/4})^s,  C > 0
+ \end{split}
  \end{equation*}
- Taking $\epsilon = n^{-9-\eta}\phi^{-5}$, this sums goes to zero.\\
+ Taking $\epsilon = n^{-13-\eta}\phi^{-5}$, this sums goes to zero.\\
  
  For $A_3$, we combine the argument for $A_2$ and the trick used at the end of section \ref{sec::firstProof}. We come to this slightly different bound.
  \begin{equation*}
-P(A_3) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{n\epsilon})^{s_0}(64n\phi\epsilon)^{s/4 + s_0} \leq \sum_{s < n}(Cn^{13/4}\phi^{5/4}\epsilon^{1/4})^{s}
+P(A_3) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{n\epsilon})^{s_0}(Cn\phi\epsilon)^{s/4 + s_0} \leq \sum_{s < n}(Cn^{13/4}\phi^{5/4}\epsilon^{1/4})^{s}, \text{ for } C > 0 
 \end{equation*}
  Taking $\epsilon = n^{-13-\eta}\phi^{-5}$, this sums goes to zero.
