--- a/report/FinalReport/Generalisation.tex
+++ b/report/FinalReport/Generalisation.tex
@@ -1,4 +1,5 @@
 \section{Proof for multiple cliques with connections}
+\label{strongResult}
 Using what we saw so far, we can prove that FLIP is polynomial for a most general case. \\
 Let G = (V,E) of $n$ vertices and $m$ edges be a graph composed of a family $H = \{H_1, H_2,..., H_h\}$ of cliques and some vertices whose degree is at most $log(n)$. Assume further that all vertices in $H$ have at most $log(n)$ edges going to the other cliques.\\
 We will prove that FLIP terminates in a polynomial number of step by proving the following proposition :
