--- a/report/FinalReport/abstract.tex
+++ b/report/FinalReport/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-The problem of finding a max-cut in graphs has many applications and motivation. As this problem to be NP-hard, research was made on simpler problems such as a local max-cut. 
+Local search heuristics is often used to deal with NP-hard optimization problems, however if some of them work well in practice, they behave poorly on the worst instances.  This is the case with the Maximum-Cut Problem, where the simple algorithm FLIP takes exponential time in finding a local max-cut on some graphs. It has been found that adding a small amount of noise on the edges could improve greatly the running time of FLIP. This motivates the study of the smoothed complexity of local max-cut where a small perturbation factor$\phi$ is added to the edges. We show that for multiple classes of graphs the smoothed complexity of FLIP is polynomial in $n$ and $\phi$ where $n$ is the number of nodes.
 \end{abstract}
