nearly finished i do believe

--- a/report/FinalReport/Generalisation.tex
+++ b/report/FinalReport/Generalisation.tex
@@ -25,7 +25,7 @@ Using lemma \ref{cor::boundN} along with an union-bound on possible $CSub$ we ge
  \begin{equation*}
  \begin{split}
  P(A_2) \leq &\sum_{s<n}n^{2s}(2n/n\epsilon)^s (16(n + 1)^{5/4}\phi^{5/4}\epsilon^{5/4})^s \\
- \leq & \sum_{s<n} C(n^{13/4}\phi{5/4}\epsilon^{1/4})^s,  C > 0
+ \leq & \sum_{s<n} C(n^{13/4}\phi^{5/4}\epsilon^{1/4})^s,  C > 0
  \end{split}
  \end{equation*}
  Taking $\epsilon = n^{-13-\eta}\phi^{-5}$, this sums goes to zero.\\
