--- a/report/FinalReport/FinalReportNH.tex
+++ b/report/FinalReport/FinalReportNH.tex
@@ -13,7 +13,7 @@
 \newcommand{\rank}{\text{rank}}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \title{Smoothed complexity of local max-cut for special graphs}
-
+\author{Nataniel Hofer \\ under the supervision of Dr Ola Svensson}
 \begin{document}
 \maketitle
 \input{abstract}
